@@ -1,6 +1,7 @@
 Alpha 0.1.8.41
 - Add support for GriefDefender v2. Thanks, haroldrc, for the heads-up!
 - Add support for Medieval Factions. Thanks, OGVampire, for the suggestion!
+- Add config option to refund doors on delete. Thanks, LoneTiger, for the suggestion!
 
 Alpha 0.1.8.40
 - Add support for 1.19.1.
